# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./workers";
 export * from "./weighRecords";
+export * from "./attendance";
